ASe agrego parte grafica para mostar la informacion referente al total de casos regionales. Se uso la libreria MPAndroidChart para implementar el grafico de barras horizontal.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CovidStatics</string>
+    <string name="app_name">CovidStadisticas</string>
     <string name="MainActLabel">Covid-19 Chile</string>
     <string name="Ver_Stats_Label">Ver Estadisticas</string>
 </resources>
